<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/list_color_1"
    tools:context=".Disclaimer">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textAlignment="center"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:text="Disclaimer!"
        android:textSize="25dp"
        android:textStyle="bold"
        android:fontFamily="@font/imprima"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="25dp"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textSize="17dp"
            android:fontFamily="@font/imprima"
            android:layout_marginRight="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer1"
            android:textSize="17dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/imprima"
            android:layout_marginRight="30dp"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer2"
                android:textSize="17dp"
                android:fontFamily="@font/imprima"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer3"
                android:fontFamily="@font/imprima"
                android:layout_marginLeft="30dp"
                android:textSize="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"

                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/corner"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/agree"

                    android:textColor="#fff"
                    android:id="@+id/agree"
                    android:onClick="onAgreeClick"
                    android:layout_marginRight="50dp"
                    />

                <Button
                    android:id="@+id/disagree"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="32dp"
                    android:layout_toStartOf="@+id/agree"
                    android:background="@drawable/cancel_corner"
                    android:onClick="onDisagreeClick"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="I Don't Agree"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>